kitten/reported_bugs/rust/rust-83253-1/stderr.txt
error[E0412]: cannot find type `len` in this scope

 --> mutant.rs:9:1

  |

9 | len > ( & self ) -> ConstChunksExact < '_ , T , { N } > { assert ! ( N != 0 ) ; let rem = self . len ( ) % N ; let len = self . len ( ) -...

  | ^^^ not found in this scope



thread 'rustc' panicked at 'assertion failed: `(left == right)`

  left: `usize`,

 right: `[type error]`: cannot relate constants of different types', /rustc/36f1f04f18b89ba4a999bcfd6584663fd6fc1c5d/compiler/rustc_middle/src/ty/relate.rs:502:5

note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace



error: internal compiler error: unexpected panic



note: the compiler unexpectedly panicked. this is a bug.



note: we would appreciate a bug report: https://github.com/rust-lang/rust/issues/new?labels=C-bug%2C+I-ICE%2C+T-compiler&template=ice.md



note: rustc 1.52.0-nightly (36f1f04f1 2021-03-17) running on x86_64-unknown-linux-gnu



note: compiler flags: -Z mir-opt-level=3 -Z new-llvm-pass-manager=yes -Z unsound-mir-opts=yes -Z polonius=yes -Z polymorphize=yes -C debuginfo=2 -C opt-level=3 --crate-type staticlib



query stack during panic:

#0 [check_mod_item_types] checking item types in top-level module

#1 [analysis] running analysis passes on this crate

end of query stack

error: aborting due to previous error



For more information about this error, try `rustc --explain E0412`.

